--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav>
         <div class="nav-links">
           <ul>
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars navdot"></i>
             <li><a href="">Home</a></li>
             <li><a href="">Clubs</a></li>
             <li><a href="">World Cup 2023</a></li>
